Working On SMM ADMIN

--- a/smm-admin/index.html
+++ b/smm-admin/index.html
@@ -106,33 +106,41 @@
                             <span class="menu-icon">
                                 <i class="fa-brands fa-codepen"></i>
                             </span>
-                            <span class="menu-name">Bootstrap</span>
+                            <span class="menu-name">Components</span>
                         </a>
 
                         <div class="submenu collapse" id="dropdown__side__menu__2">
                             <ul>
                                 <li>
-                                    <a href="">
+                                    <a href="buttons.html">
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">cards design</span>
+                                        <span class="submenu-name">Buttons</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="toggle-switches.html">
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">cards design</span>
+                                        <span class="submenu-name">toggle switches</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="form-elements.html">
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">cards design</span>
+                                        <span class="submenu-name">Form Elements</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="pagination.html">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">pagination</span>
                                     </a>
                                 </li>
                             </ul>
