Working On SMM ADMIN

--- a/smm-admin/alerts.html
+++ b/smm-admin/alerts.html
@@ -292,86 +292,48 @@
         <div class="container-fluid">
             <h2 class="text-capitalize mb-5">dashboard 01</h2>
 
-            <!-- Buttons -->
+            <!-- Pagination -->
             <div class="mb-5">
                 <div class="row g-5">
-
-                    <!-- Rounded Buttons -->
                     <div class="col-lg-6">
                         <div class="text-color bg-white rounded-4 shadow-lg pb-4">
 
-                            <p class="border-bottom text-capitalize fw-medium px-5 py-5 mb-4">Rounded Button</p>
+                            <p class="border-bottom text-capitalize fw-medium px-5 py-5 mb-4">Alerts</p>
 
                             <div class="card-body button-list px-5">
-                                <button class="btn button-primary btn-rounded">Primary</button>
-                                <button class="btn button-success btn-rounded">Success</button>
-                                <button class="btn button-danger btn-rounded">Danger</button>
-                                <button class="btn btn-warning btn-rounded">Danger</button>
-                                <button class="btn btn-info btn-rounded">Info</button>
-                            </div>
-                        </div>
-                    </div>
 
-                    <!-- Normarl Buttons -->
-                    <div class="col-lg-6">
-                        <div class="device-location text-color bg-white rounded-4 shadow-lg pb-4">
-
-                            <p class="border-bottom text-capitalize fw-medium px-5 py-5 mb-4">Normal Button</p>
-
-                            <div class="card-body button-list px-5">
-                                <button class="btn button-primary">Primary</button>
-                                <button class="btn button-success">Success</button>
-                                <button class="btn button-danger">Danger</button>
-                                <button class="btn btn-warning">Danger</button>
-                                <button class="btn btn-info">Info</button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Toggle Switches -->
-                    <div class="col-lg-6">
-                        <div class="text-color bg-white rounded-4 shadow-lg pb-4">
-
-                            <p class="border-bottom text-capitalize fw-medium px-5 py-5 mb-4">Toggle Switches</p>
-                            <div class="card-body button-list px-5">
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch"
-                                        id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault">Inactive</label>
+                                <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                                    <strong>Primary!</strong> Alert
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                        aria-label="Close"></button>
                                 </div>
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch"
-                                        id="flexSwitchCheckChecked" checked>
-                                    <label class="form-check-label" for="flexSwitchCheckChecked">Active</label>
+
+                                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                    <strong>Success!</strong> Alert
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                        aria-label="Close"></button>
+                                </div>
+
+                                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                    <strong>Warning!</strong> Alert
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                        aria-label="Close"></button>
+                                </div>
+
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    <strong>Danger!</strong> Alert
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                        aria-label="Close"></button>
+                                </div>
+
+                                <div class="alert alert-info alert-dismissible fade show" role="alert">
+                                    <strong>Info!</strong> Alert
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                        aria-label="Close"></button>
                                 </div>
                             </div>
                         </div>
                     </div>
-
-                    <!-- Radio Buttons -->
-                    <div class="col-lg-6">
-                        <div class="text-color bg-white rounded-4 shadow-lg pb-4">
-
-                            <p class="border-bottom text-capitalize fw-medium px-5 py-5 mb-4">Radios</p>
-                            <div class="card-body button-list px-5">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                        id="flexRadioDefault1">
-                                    <label class="form-check-label" for="flexRadioDefault1">
-                                        Inactive
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                        id="flexRadioDefault2" checked>
-                                    <label class="form-check-label" for="flexRadioDefault2">
-                                        Active
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
             <!-- /Buttons -->
