--- a/smm-admin/form-elements.html
+++ b/smm-admin/form-elements.html
@@ -31,7 +31,7 @@
     <!-- Sidebar Starts Here -->
     <nav class="sidebar" id="sidebar">
         <div class="sidebar-header text-center py-4 border-bottom">
-            <a href="index.html d-block">
+            <a href="index.html">
                 <div>
                     <img class="logo img-fluid" src="images/logo.png" alt="Logo">
                     <span class="logo-text fs-1 black-color">sash</span>
@@ -141,6 +141,14 @@
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
                                         <span class="submenu-name">pagination</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="alerts.html">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">alerts</span>
                                     </a>
                                 </li>
                             </ul>
