Working On SMM ADMIN

--- a/smm-admin/alerts.html
+++ b/smm-admin/alerts.html
@@ -151,6 +151,14 @@
                                         <span class="submenu-name">alerts</span>
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="modal.html">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">Modal</span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </li>
