--- a/smm-admin/index.html
+++ b/smm-admin/index.html
@@ -23,7 +23,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
-    <title>SMM Panel</title>
+    <title>SMM Admin Panel</title>
 </head>
 
 <body class="body" id="body">
