Working On SMM ADMIN

--- a/smm-admin/modal.html
+++ b/smm-admin/modal.html
@@ -23,7 +23,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
-    <title>SMM Panel</title>
+    <title>Modal - SMM Panel</title>
 </head>
 
 <body class="body" id="body">
@@ -124,7 +124,7 @@
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">Toggle switches</span>
+                                        <span class="submenu-name">toggle switches</span>
                                     </a>
                                 </li>
                                 <li>
@@ -170,33 +170,41 @@
                             <span class="menu-icon">
                                 <i class="fa-regular fa-file-lines"></i>
                             </span>
-                            <span class="menu-name">landing page</span>
+                            <span class="menu-name">Pages</span>
                         </a>
 
                         <div class="submenu collapse" id="dropdown__side__menu__3">
                             <ul>
                                 <li>
-                                    <a href="">
+                                    <a href="register.html">
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">cards design</span>
+                                        <span class="submenu-name">Register</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="login.html">
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">cards design</span>
+                                        <span class="submenu-name">login</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="forgot-password.html">
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">cards design</span>
+                                        <span class="submenu-name">forgot password</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="404.html">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">404</span>
                                     </a>
                                 </li>
                             </ul>
