--- a/smm-admin/alerts.html
+++ b/smm-admin/alerts.html
@@ -124,7 +124,7 @@
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">Toggle switches</span>
+                                        <span class="submenu-name">toggle switches</span>
                                     </a>
                                 </li>
                                 <li>
@@ -170,33 +170,41 @@
                             <span class="menu-icon">
                                 <i class="fa-regular fa-file-lines"></i>
                             </span>
-                            <span class="menu-name">landing page</span>
+                            <span class="menu-name">Pages</span>
                         </a>
 
                         <div class="submenu collapse" id="dropdown__side__menu__3">
                             <ul>
                                 <li>
-                                    <a href="">
+                                    <a href="register.html">
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">cards design</span>
+                                        <span class="submenu-name">Register</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="login.html">
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">cards design</span>
+                                        <span class="submenu-name">login</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
+                                    <a href="forgot-password.html">
                                         <span class="submenu-icon">
                                             <i class="fa-solid fa-angles-right"></i>
                                         </span>
-                                        <span class="submenu-name">cards design</span>
+                                        <span class="submenu-name">forgot password</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="404.html">
+                                        <span class="submenu-icon">
+                                            <i class="fa-solid fa-angles-right"></i>
+                                        </span>
+                                        <span class="submenu-name">404</span>
                                     </a>
                                 </li>
                             </ul>
@@ -311,31 +319,36 @@
                             <div class="card-body button-list px-5">
 
                                 <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                                    <i class="fa-regular fa-square-check"></i>
                                     <strong>Primary!</strong> Alert
                                     <button type="button" class="btn-close" data-bs-dismiss="alert"
                                         aria-label="Close"></button>
                                 </div>
 
                                 <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                    <i class="fa-regular fa-thumbs-up"></i>
                                     <strong>Success!</strong> Alert
                                     <button type="button" class="btn-close" data-bs-dismiss="alert"
                                         aria-label="Close"></button>
                                 </div>
 
                                 <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                    <i class="fa-solid fa-circle-exclamation"></i>
                                     <strong>Warning!</strong> Alert
                                     <button type="button" class="btn-close" data-bs-dismiss="alert"
                                         aria-label="Close"></button>
                                 </div>
 
-                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                                    <strong>Danger!</strong> Alert
+                                <div class="alert alert-info alert-dismissible fade show" role="alert">
+                                    <i class="fa-regular fa-bell"></i>
+                                    <strong>Info!</strong> Alert
                                     <button type="button" class="btn-close" data-bs-dismiss="alert"
                                         aria-label="Close"></button>
                                 </div>
 
-                                <div class="alert alert-info alert-dismissible fade show" role="alert">
-                                    <strong>Info!</strong> Alert
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    <i class="fa-regular fa-circle-xmark"></i>
+                                    <strong>Danger!</strong> Alert
                                     <button type="button" class="btn-close" data-bs-dismiss="alert"
                                         aria-label="Close"></button>
                                 </div>
