--- a/smm-admin/buttons.html
+++ b/smm-admin/buttons.html
@@ -220,13 +220,13 @@
 
 
     <!-- Header Starts Here -->
-    <header class="header p-4" id="header">
+    <header class="header px-sm-4 py-4" id="header">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center">
 
                 <!-- Header Left Part -->
                 <div class="header-left d-flex align-items-center">
-                    <span class="sidebar-toggler fs-2 brand-color me-5" role="button">
+                    <span class="sidebar-toggler fs-1 brand-color me-5" role="button">
                         <i class="fa-solid fa-bars-staggered"></i>
                     </span>
 
@@ -241,14 +241,29 @@
                     </form>
                 </div>
 
+                <!-- Header Middle Part -->
+                <a class="d-lg-none" href="index.html">
+                    <div>
+                        <img class="logo img-fluid" src="images/logo.png" alt="Logo">
+                        <span class="logo-text fs-1 black-color">sash</span>
+                    </div>
+                </a>
+
                 <!-- Header Right Part -->
                 <div class="header-right">
                     <div class="d-flex align-items-center">
-                        <span onclick="toggleFullScreen();" class="fullscreen-btn fs-2 brand-color" role="button">
+
+                        <div class="fs-2 brand-color d-lg-none" role="button" data-bs-toggle="modal"
+                            data-bs-target="#searchModal">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </div>
+
+                        <span onclick="toggleFullScreen();" class="fullscreen-btn fs-2 brand-color ms-4 ms-sm-5"
+                            role="button">
                             <i class="fa-solid fa-compress"></i>
                         </span>
 
-                        <div class="icon-group ms-5">
+                        <div class="icon-group ms-4 ms-sm-5">
                             <a class="text-color-dark brand-color" href="">
                                 <div class="floating-text-icon d-inline-block position-relative fs-2">
                                     <i class="fa-regular fa-bell"></i>
@@ -257,16 +272,7 @@
                             </a>
                         </div>
 
-                        <!-- <div class="icon-group ms-5">
-                            <a class="text-color-dark brand-color" href="">
-                                <div class="floating-text-icon d-inline-block position-relative fs-2">
-                                    <i class="fa-regular fa-message"></i>
-                                    <span class="floating-num bg-red fs-6">5</span>
-                                </div>
-                            </a>
-                        </div> -->
-
-                        <div class="user-profile-img ms-5">
+                        <div class="user-profile-img ms-4 ms-sm-5">
                             <div class="btn-group">
                                 <img src="images/user-profile-img.jpg" type="button" class="dropdown-toggle"
                                     data-bs-toggle="dropdown" aria-expanded="false" alt="">
@@ -304,9 +310,19 @@
     <!-- Header Ends Here -->
 
     <!-- Main Content Starts Here -->
-    <main class="main px-4 py-5" id="main">
+    <main class="main px-sm-4 py-5" id="main">
         <div class="container-fluid">
-            <h2 class="text-capitalize mb-5">dashboard 01</h2>
+
+            <div class="d-sm-flex justify-content-between align-items-center text-capitalize mb-5">
+                <h2 class="mb-2 mb-sm-0">Buttons</h2>
+
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">buttons</li>
+                    </ol>
+                </nav>
+            </div>
 
             <!-- Buttons -->
             <div class="mb-5">
@@ -394,6 +410,38 @@
         </div>
     </main>
     <!-- Main Content Ends Here -->
+
+
+    <!-- Search Modal -->
+    <div class="modal fade p-0 show" id="searchModal">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content border-0 py-5 rounded-0">
+
+                <div class="text-end px-5">
+                    <span class="fs-1" role="button" data-bs-dismiss="modal">
+                        <i class="fa-solid fa-xmark"></i>
+                    </span>
+                </div>
+
+                <div class="modal-body text-center p-4 py-5 p-sm-5">
+
+                    <h1 class="text-color-dark text-capitalize font-weight-500 mb-5">Search Here</h1>
+
+                    <form action="" class="search-form">
+                        <div class="input-group">
+                            <input type="search" class="form-control fs-3 px-4 py-2" placeholder="Search..."
+                                aria-describedby="basic-addon2">
+                            <span class="input-group-text fs-3 bg-brand text-white" id="basic-addon2">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </span>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
